<?xml version="1.0" encoding="utf-8"?>
<!--
Nama    : Ilham Alhafizh Apris
NIM     : 10116521
Kelas   : IF-12 / AKB-12
Tanggal : 6 April 2019
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".biodata"
    android:orientation="vertical"
    android:background="@color/whitetwo">

    <RelativeLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/tvNamaPanggilan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_panggilan_kamu"
            android:textSize="26sp"
            android:textColor="@color/Hitam"
            android:fontFamily="@font/nunito_bold"
            />

        <EditText
            android:id="@+id/edtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/tvNamaPanggilan"
            android:hint="@string/contoh_budi"
            android:paddingBottom="24dp"
            android:fontFamily="@font/rubik_regular"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/tvUmur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtNama"
            android:layout_marginTop="20dp"
            android:text="@string/umur_kamu"
            android:textSize="26sp"
            android:textColor="@color/Hitam"
            android:fontFamily="@font/nunito_bold"
            />

        <EditText
            android:id="@+id/edtUmur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/tvUmur"
            android:hint="@string/contoh_12"
            android:fontFamily="@font/rubik_regular"
            android:paddingBottom="24dp"
            android:inputType="number"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_gradient_rounded_corner"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/selanjutnya"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textAllCaps="false" />
    </RelativeLayout>

</LinearLayout>