<?xml version="1.0" encoding="utf-8"?>
<!--
Nama    : Ilham Alhafizh Apris
NIM     : 10116521
Kelas   : IF-12 / AKB-12
Tanggal : 6 April 2019
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:background="@color/whitetwo">

    <RelativeLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/tvKodeKeluarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kode_keluarga"
            android:textSize="28sp"
            android:textColor="@color/Hitam"
            android:fontFamily="@font/nunito_bold"
            />
        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvKodeKeluarga"
            android:layout_marginTop="8dp"
            android:text="@string/ketikkan_kode_keluarga_yang_ayah_bunda_miliki_disini"
            android:textColor="@color/Hitam"
            android:textSize="18sp"
            android:fontFamily="@font/rubik_regular"
            />

        <EditText
            android:id="@+id/edtKodeKeluarga"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tvDesc"
            android:inputType="text"
            android:background="@drawable/edittext_rounded_corner"
            android:text="@string/kode"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular"
            />

        <TextView
            android:id="@+id/tvDescKetentuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtKodeKeluarga"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="12sp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/Hitam"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_below="@+id/tvDescKetentuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_gradient_rounded_corner"
            android:text="@string/masuk"
            android:fontFamily="@font/nunito_bold"
            android:textAllCaps="false"
            android:textSize="18sp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/customborder"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvBelumPunyKode"
            android:text="@string/belum_punya_kode_keluarga"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/rubik_regular"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnBeliKode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBelumPunyKode"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button2_gradient_rounded_corner"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/beli_kode_keluarga_disini"
            android:textAllCaps="false"
            android:textColor="@color/whitetree"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>